feat: booking-service refactor, lab management, and student approval flow